tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/rawstring-del.stderr
TOML parse error at line 1, column 22
  |
1 | rawstring-del = 'null'
  |                      ^
invalid literal string
